--- a/index.html
+++ b/index.html
@@ -69,5 +69,5 @@
 </ul>
 </body>
 
-<footer> © Rome Espallardo. All right reserved. </footer>
+<footer> © Rome Espallardo. All rights reserved. </footer>
 </html>
